--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
@@ -25,45 +24,16 @@
                 android:layout_height="match_parent">
 
 
-                <ImageButton
-                    android:id="@+id/img_close"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:background="@drawable/tab_selected_background"
-                    android:layout_marginTop="20dp"
-                    android:src="@drawable/ic_close"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:tint="@color/black"
-                    android:scaleType="centerInside" />
-
-
                 <TextView
                     android:id="@+id/textView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-
-                    android:text="My account"
+                    android:text="My Settings"
+                    android:textStyle="bold"
                     android:textColor="@color/black"
                     android:textSize="20sp"
-                    app:layout_constraintBottom_toBottomOf="@id/img_close"
-                    app:layout_constraintStart_toEndOf="@id/img_close"
-                    app:layout_constraintTop_toTopOf="@id/img_close" />
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:layout_width="85dp"
-                    android:layout_height="45dp"
-                    android:background="@drawable/white_button"
-                    android:layout_marginEnd="25dp"
-                    android:layout_marginTop="25dp"
-                    android:textColor="#6758a5"
-                    android:drawableEnd="@drawable/baseline_logout_24"
-                    android:text="Log out"
-
-                    android:textAllCaps="false"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -73,17 +43,15 @@
             android:id="@+id/progressbarAccount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:visibility="gone"
-            />
+            android:layout_margin="20dp"
+            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
+            app:layout_constraintStart_toStartOf="@+id/leftGuideline"
+            app:layout_constraintTop_toBottomOf="@+id/imageUser" />
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imageUser"
-            android:layout_width="85dp"
-            android:layout_height="85dp"
+            android:layout_width="115dp"
+            android:layout_height="115dp"
             android:layout_marginTop="24dp"
             android:src="@color/black"
             app:layout_constraintEnd_toEndOf="@id/rightGuideline"
@@ -91,135 +59,137 @@
             app:layout_constraintStart_toStartOf="@id/leftGuideline"
             app:layout_constraintTop_toBottomOf="@+id/toolbarUserAccount" />
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/imageEdit"
-            android:layout_width="28dp"
-            android:layout_height="28dp"
-            android:layout_marginTop="50dp"
-            android:background="@drawable/button"
-        android:padding="5dp"
-            android:src="@drawable/baseline_edit_24"
-            app:layout_constraintBottom_toBottomOf="@id/imageUser"
-            app:layout_constraintEnd_toEndOf="@id/imageUser" />
+        <Button
+            android:id="@+id/btnEdit"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="90dp"
+            android:layout_height="35dp"
+            android:layout_marginTop="16dp"
+            android:text="Edit"
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/edFirstNameLabel"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="0dp"
-            android:layout_marginTop="40dp"
+            android:textAllCaps="false"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="@+id/rightGuideline"
+            app:layout_constraintStart_toStartOf="@id/leftGuideline"
+            app:layout_constraintTop_toBottomOf="@+id/tvEmail" />
+
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
+            android:layout_marginTop="25dp"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="@+id/rightGuideline"
             app:layout_constraintStart_toStartOf="@+id/leftGuideline"
             app:layout_constraintTop_toBottomOf="@+id/imageUser">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edFirstName"
-                android:gravity="center"
-                android:textStyle="bold"
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/tvFirstName"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="First Name" />
-        </com.google.android.material.textfield.TextInputLayout>
-     <!--   <EditText
-            android:id="@+id/edFirstName"
-            android:layout_width="0dp"
-            android:layout_height="45dp"
-            android:layout_marginTop="40dp"
-            android:gravity="center"
-            android:hint="First Name"
-            android:singleLine="true"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
-            app:layout_constraintStart_toStartOf="@+id/leftGuideline"
-            app:layout_constraintTop_toBottomOf="@+id/imageUser" />-->
-
-       <!-- <EditText
-            android:id="@+id/edLastName"
-            android:layout_width="0dp"
-            android:layout_height="45dp"
-            android:layout_marginTop="15dp"
-            android:gravity="center"
-            android:hint="Last Name"
-            android:singleLine="true"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
-            app:layout_constraintStart_toStartOf="@id/leftGuideline"
-            app:layout_constraintTop_toBottomOf="@id/edFirstNameLabel" />-->
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/edLastNameLabel"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
-            app:layout_constraintStart_toStartOf="@+id/leftGuideline"
-            app:layout_constraintTop_toBottomOf="@id/edFirstNameLabel"
-            >
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edLastName"
-                android:gravity="center"
+                android:layout_marginEnd="2dp"
+                android:text="Haitham"
                 android:textStyle="bold"
-                android:layout_width="match_parent"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/tvLastName"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="Last Name" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <!--<EditText
-            android:id="@+id/edEmail"
-            android:layout_width="0dp"
-            android:layout_height="45dp"
-            android:layout_marginTop="10dp"
-            android:editable="false"
-            android:gravity="center"
-            android:hint="Email"
-            android:singleLine="true"
-            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
-            app:layout_constraintStart_toStartOf="@id/leftGuideline"
-            app:layout_constraintTop_toBottomOf="@id/edLastNameLabel" />-->
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/edEmailLabel"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
-            app:layout_constraintStart_toStartOf="@+id/leftGuideline"
-            app:layout_constraintTop_toBottomOf="@id/edLastNameLabel"
-            >
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edEmail"
-                android:gravity="center"
+                android:layout_marginStart="2dp"
+                android:text="Attab"
                 android:textStyle="bold"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Email" />
-        </com.google.android.material.textfield.TextInputLayout>
+                android:textSize="18sp" />
+        </LinearLayout>
 
         <TextView
-            android:id="@+id/tvUpdatePassword"
+            android:id="@+id/tvEmail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="Forgot/Change password"
+            android:text="haithem.attab@univ-medea.dz"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
+            app:layout_constraintStart_toStartOf="@+id/linearLayout"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+        <TextView
+            android:id="@+id/tvOrders"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Orders"
+            android:textSize="16sp"
+            android:textStyle="bold"
+           android:layout_marginTop="54dp"
             app:layout_constraintStart_toStartOf="@id/leftGuideline"
-            app:layout_constraintTop_toBottomOf="@+id/edEmailLabel" />
+            app:layout_constraintTop_toBottomOf="@+id/btnEdit" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnAcceptedOrders"
+            android:layout_width="0dp"
+            android:layout_height="45dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/button"
+            android:backgroundTint="@color/white"
+            android:drawableEnd="@drawable/baseline_done_outline_24"
+            android:paddingEnd="16dp"
+            android:text="Accepted Orders"
+            android:textAllCaps="false"
+            android:textColor="#6758a5"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/tvOrders"
+            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
+
+            app:layout_constraintStart_toStartOf="@id/leftGuideline" />
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnRefusedOrders"
+            android:layout_width="0dp"
+            android:layout_height="45dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/button"
+            android:backgroundTint="@color/white"
+            android:drawableEnd="@drawable/baseline_disabled_by_default_24"
+            android:paddingEnd="16dp"
+            android:text="Refused Orders"
+            android:textAllCaps="false"
+            android:textColor="#6758a5"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/btnAcceptedOrders"
+            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
+
+            app:layout_constraintStart_toStartOf="@id/leftGuideline" />
+        <TextView
+            android:id="@+id/tvLogout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Log out"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:layout_marginTop="54dp"
+            app:layout_constraintStart_toStartOf="@id/leftGuideline"
+            app:layout_constraintTop_toBottomOf="@+id/btnRefusedOrders" />
+
 
         <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
-            android:id="@+id/buttonSave"
+            android:id="@+id/btnLogout"
             android:layout_width="0dp"
             android:layout_height="45dp"
             android:background="@drawable/button"
-
-            android:text="Save"
+            android:backgroundTint="@color/white"
+            android:drawableEnd="@drawable/baseline_logout_24"
+            android:paddingEnd="16dp"
+            android:text="Log out"
+            android:layout_marginTop="16dp"
             android:textAllCaps="false"
-            android:textColor="@color/white"
+            android:textColor="#6758a5"
             android:textSize="12sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/rightGuideline"
+
             app:layout_constraintStart_toStartOf="@id/leftGuideline"
-            
-            android:layout_marginBottom="20dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/tvLogout" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/leftGuideline"
