--- a/app/src/main/res/navigation/client_nav_graph.xml
+++ b/app/src/main/res/navigation/client_nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/client_graph"
-    app:startDestination="@id/customizeProfileFragment">
+    app:startDestination="@id/homeFragment">
 
     <fragment
         android:id="@+id/homeFragment"
@@ -27,7 +27,11 @@
         android:id="@+id/profileFragment"
         android:name="com.example.easy.fragments.client.ProfileFragment"
         android:label="fragment_profile"
-        tools:layout="@layout/fragment_profile" />
+        tools:layout="@layout/fragment_profile" >
+        <action
+            android:id="@+id/action_profileFragment_to_customizeProfileFragment"
+            app:destination="@id/customizeProfileFragment" />
+    </fragment>
     <fragment
         android:id="@+id/orderFragment"
         android:name="com.example.easy.fragments.client.OrderFragment"
