--- a/app/src/main/res/layout/job_information_item.xml
+++ b/app/src/main/res/layout/job_information_item.xml
@@ -2,6 +2,7 @@
 
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="16dp"
@@ -12,47 +13,31 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="125dp">
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.5" />
 
-        <ImageView
-            android:id="@+id/job_image_item"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginEnd="10dp"
-            android:scaleType="fitCenter"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/guideline"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tv_job_title"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:text="Scotch Premium"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="16dp"
+            android:text="Job Title"
             android:textColor="@color/black"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@id/guideline"
-            app:layout_constraintTop_toTopOf="@id/job_image_item" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteY="10dp" />
 
         <TextView
-            android:id="@+id/tv_job_price"
+            android:id="@+id/tv_job_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="$1600"
+            android:text="2/2/2001"
             android:textColor="@color/black"
             android:textSize="14sp"
-
-            app:layout_constraintEnd_toEndOf="@+id/tv_job_title"
-            app:layout_constraintTop_toBottomOf="@id/tv_job_title" />
+            app:layout_constraintStart_toStartOf="@+id/tv_job_location"
+            app:layout_constraintTop_toBottomOf="@+id/tv_job_location" />
         <TextView
             android:id="@+id/tv_job_location"
             android:layout_width="wrap_content"
@@ -64,7 +49,7 @@
             app:layout_constraintTop_toBottomOf="@id/tv_job_title" />
 
         <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
-            android:id="@+id/btn_see_product"
+            android:id="@+id/btn_edit_order"
             android:layout_width="83dp"
             android:layout_height="28dp"
             android:layout_margin="16dp"
