--- a/app/src/main/res/layout/fragment_edit_order.xml
+++ b/app/src/main/res/layout/fragment_edit_order.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.client.EditOrderFragment">
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbarEditOrder"
         android:layout_width="match_parent"
@@ -23,13 +24,13 @@
                 android:id="@+id/img_close"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:background="@drawable/tab_selected_background"
                 android:layout_marginTop="20dp"
+                android:background="@drawable/tab_selected_background"
+                android:scaleType="centerInside"
                 android:src="@drawable/ic_close"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:tint="@color/black"
-                android:scaleType="centerInside" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:tint="@color/black" />
 
 
             <TextView
@@ -46,26 +47,26 @@
                 app:layout_constraintTop_toTopOf="@id/img_close" />
 
 
-
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.appcompat.widget.Toolbar>
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/edDateLabel"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
-        android:layout_marginTop="40dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
         app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
         app:layout_constraintStart_toStartOf="@+id/leftGuideline"
         app:layout_constraintTop_toBottomOf="@+id/toolbarEditOrder">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edDateName"
-            android:gravity="center"
-            android:textStyle="bold"
+            android:id="@+id/edDate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Date" />
+            android:gravity="center"
+            android:hint="Date"
+            android:textStyle="bold" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -75,16 +76,15 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
         app:layout_constraintStart_toStartOf="@+id/leftGuideline"
-        app:layout_constraintTop_toBottomOf="@id/edDateLabel"
-        >
+        app:layout_constraintTop_toBottomOf="@id/edDateLabel">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edLastName"
-            android:gravity="center"
-            android:textStyle="bold"
+            android:id="@+id/edLocation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Location" />
+            android:gravity="center"
+            android:hint="Location"
+            android:textStyle="bold" />
     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -95,16 +95,17 @@
         android:layout_height="150dp"
         app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
         app:layout_constraintStart_toStartOf="@+id/leftGuideline"
-      app:layout_constraintTop_toBottomOf="@+id/edLocationLabel"
-        >
+        app:layout_constraintTop_toBottomOf="@+id/edLocationLabel">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edDescription"
-            android:gravity="center_horizontal"
-            android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="Description" />
+            android:gravity="center_horizontal"
+            android:hint="Description"
+            android:textStyle="bold" />
+
+
     </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.constraintlayout.widget.Guideline
@@ -120,4 +121,54 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.96" />
+
+    <ProgressBar
+        android:id="@+id/progressbar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
+        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
+        app:layout_constraintTop_toBottomOf="@+id/edDescriptionLabel">
+
+        <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
+            android:id="@+id/btnEdit"
+            android:background="@drawable/button"
+            android:layout_width="0dp"
+            android:textColor="@color/white"
+            android:textAllCaps="false"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_weight="1"
+            android:text="Edit" />
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btnCheck"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="64dp"
+        android:drawableEnd="@drawable/baseline_arrow_forward_ios_24"
+        android:paddingTop="8dp"
+        android:paddingEnd="16dp"
+        android:paddingBottom="8dp"
+        android:text="Check job details"
+        android:textAllCaps="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/leftGuideline" />
 </androidx.constraintlayout.widget.ConstraintLayout>
