--- a/app/src/main/res/layout/activity_employer.xml
+++ b/app/src/main/res/layout/activity_employer.xml
@@ -7,7 +7,7 @@
     tools:context=".activities.EmployerActivity">
 
     <fragment
-        android:id="@+id/clientHostFragment"
+        android:id="@+id/employerHostFragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -16,5 +16,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/employer_nav_graph"
         tools:layout_editor_absoluteX="1dp" />
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:background="@drawable/bottom_nav_background"
+        android:elevation="8dp"
+        app:itemPaddingBottom="10dp"
+        app:itemPaddingTop="10dp"
+        app:labelVisibilityMode="selected"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:menu="@menu/bottom_nav_menu_employer" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
